<resources>
    <string name="app_name">CatChat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inbox">Inbox</string>
    <string name="sent">Sent</string>
    <string name="trash">Trash</string>
    <string name="spam">Spam</string>
    <string name="important">Important</string>
    <string name="categories">Categories</string>
</resources>