<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inbox"
            android:icon="@drawable/ic_inbox"
            android:title="@string/inbox" />

        <item
            android:id="@+id/nav_sent"
            android:icon="@drawable/ic_send"
            android:title="@string/sent" />

        <item
            android:id="@+id/nav_trash"
            android:icon="@drawable/ic_trash"
            android:title="@string/trash" />
    </group>

    <item android:title="@string/categories">
        <menu>
            <item
                android:id="@+id/nav_spam"
                android:icon="@drawable/ic_spam"
                android:title="@string/spam" />

            <item
                android:id="@+id/nav_important"
                android:icon="@drawable/ic_star"
                android:title="@string/important" />
        </menu>
    </item>
</menu>